--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "bulma": "^0.7.1",
     "firebase": "^5.0.4",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "vuefire": "^1.4.5"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
