--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "bulma": "^0.7.1",
     "firebase": "^5.0.4",
-    "vue": "^2.5.2",
+    "vue": "2.5.16",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
