--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bulma": "^0.7.1",
     "firebase": "^5.0.4",
+    "vee-validate": "^2.1.0-beta.6",
     "vue": "2.5.16",
     "vue-router": "^3.0.1"
   },
